@@ -1,4 +1,27 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST kpaste-0.1.tar.gz 21031 SHA256 17d6d928dac531a310591d329ebc9ab335dadeea2f02f457eb9e38946359ebed SHA512 92afd613e94d413107a812ddd51de0a2b4de8ef2b6339ff236c822f15e93c1132cc8dbcfe6697f0d5083f8c168dae56b817e281b65f6d6a74d5fabd1484a56d1 WHIRLPOOL 65e2e6342bb08366894145308fcda3e98a611e10852aadff942c2ca45b778d58152a0dedace7e954c3bc7e02b8d9cfc747fa3373ae74a7136f29c6ef79b5b9f1
+DIST kpaste-1.0.tar.bz2 19607 SHA256 3fda8aa0efa8231b81ab863f6884999d0c1fbbc729f64979fd49a48c1651e801 SHA512 ba1e2b10192e3f5a2f8fa11ca57ec274a6b277195ba8ec41c64ea0ea4552f477c785c7894ea653137094cf3a6d041f04260006326978993d00cab1edd6c93918 WHIRLPOOL 98fa7c4d9e2eb753f1d49bf9f62dca1f80a4042a84cc3795773133b109cce95c9abf42ae080d9d2fe66448ff02d833aa6d19770f770ece618269b30f19d9d861
 EBUILD kpaste-0.1.ebuild 562 SHA256 fa33f73b3d0bdd6c5c77ba56e6e6c96ff2d7de00a08f7e1743256b239922eebb SHA512 39d26df38b313a0fa20b62b9145dcb49ef0947e253c96c08e4d7f32f5dc285d4c47f5c12c1029008ed5e5910121933a51bff9cc6f48403f25d312a671de87017 WHIRLPOOL a6de6bfb985913a6c2eeb6e8df0800b924f209ee79247f3735f1c1bf3c696b92f16f973b75e9472030466aa50bef45cbd9c2c79ba9ec5f1f9deee0aa92030c4d
-MISC ChangeLog 333 SHA256 e6975ccaf7493cc6cbdb619d73b650107c73507ac4d6f04ae78c42fc2243664a SHA512 34a7ef3ef951e0b475645586536dc901c6013d3eaf0c0478cf568633201f41b1307795a01f6894249f196fc8a5fd355897d2f598ca179823213870647ab9e8f8 WHIRLPOOL da86b1f702b37955a04a8f7144869293e457bc93955367fa42011a6d9a245e492f6b3d1339ec37177fc93d0b503ddbe924932f47361a802844fcc086dc5e9ebe
-MISC metadata.xml 232 SHA256 8e0308eed9efea18755c3fc2161057faa2b438c4d31895e776d2d5cd5ff109df SHA512 0ec524315be6762228ff54bca53ec039e93672dcef379ef6ef0087656d5e11644aebabcc08663af4f18bdb1b254e71f2b2d3f91277e2867022b93f00d975ae88 WHIRLPOOL bd96dd794e9fdf37bea367be6ada6deb0cf7b98f1978c9e23746f98b1fc2fef931077dd59f6bff7d64856ed284d39f638fb8e0517c61b42f6a0605db09297047
+EBUILD kpaste-1.0.ebuild 644 SHA256 b8ba32639e73794e361107350d85ae531e860203c45cac97cb253c1b45126847 SHA512 ba460ce28606a0e9cb659f842e39c622a8bb8ec1abfd8055bf9d79b9f4c6540b8adbcb648fbd208d031c347e1fe8aae934ee1c61a4305bcb32b0e9f6253047d5 WHIRLPOOL 37398e22979308f33644efdd524c28f166df13fa8a921877985a2410bcaeed043768fb53d4f06535131dd0782f990df9434902c75465dbab94afa2d9b35d3643
+MISC ChangeLog 535 SHA256 a5d3962f3c1d671d94d3c3dba5eb65341cdedb5b89c132b2fa7ac1116770e172 SHA512 ca0c49aa1044bcfcc77b57cafca34b66a94381b20f9c351b0d85d73ada80082048bb1dbf7d1f8b4853589dba0c6e55ccb62341cd1d5f4ae998134a517bf82e60 WHIRLPOOL d1f0c5bbda2a9154b739501fe9b4e48efa048b1e15213c51493828ff68531ae56014602f4894cfae98782f2fad3071a850869b72bea80b5149326ab7579072c7
+MISC metadata.xml 157 SHA256 01f6fa4357ce08e8b0f7900a51fa78c7f060fefc7c7da98acaec1e283dd59892 SHA512 657d6b0a31ceb7ac10bedfd5cbd634d4ff47938bd2f321203f0233e53686f7e0fd460e81f82793804895c7e97cfa472c1ca44b93314574262ee8cc5745a3efd0 WHIRLPOOL 785331909f1834cdd5d797ad484ea0e35c3e44c79a8a7517a6fb5de926acd181abd57910c8d960fb2e11ea38ddea336bca309af16fcc2df68fe4b602bca120b3
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iQJiBAEBCABMBQJTmY3GRRSAAAAAABQAKGlzc3Vlci1mcHJAbm90YXRpb25zOTc5
+MTY5NkQ3RDM3NkRBN0U5QjZGMTUwMDZCMUYzOERDQTQ1QTFFQwAKCRAGsfONykWh
+7M4dD/9WqfRa2Atb1aHSVXZG5vESsLBJV4aoZBLs8Bdtj6Wx+8flZp2xBvoH3aDs
+Wu4dgANLORzxfKyi1YC6NyEHnNqO7Ri4mdUy1MkMZP8Q4fpV7klEpzawgf9L9Xru
++Ue8s2YpwjfU9fONtHLnW0q42rTZnj8xrVoysSr95Bf8xePtUtd5hqyzRmVbLmA+
+5aW2P8gXG0ZPywT/QOGLBRzQCuVABrzNNXQWZHkEIH1TruryZOcWDiawFDsSKZYH
+I4nxdS0KCIjW0g8F/rU7tYG83mdgRi3OUosQ/9Qom+qVtWIxrOzV8F1JJMVwh1GL
+tzaGaj3Na6obfJKQLFsZu1mpuHCEoUEwgTzK66dc7Fu5rr+/oYpocIO3mgfSNrL+
+DuLf2IyHU6q0PCX/gzCWW/AxPznH2Go8ECgQDEeNZexe8cfkjRZTji8nFzPe+0DU
+w6NoRGm//7yPFQ+EtC+iEHyfFVZL/4KbPPUjH4T2a0hfJSq3anvVUkRQgGndK9gi
+CzyAGwyyi9b5+T59pLice+BJ7xLKGXOcU6NrD3EOPfRKuD4LJmSjT4m8oZSylXmJ
+W/E4Qbje2vksmQ5B4CdlT1MlDh8YdHw3Sh2iRCTuUzUqsKkhOzVDNW8lC7mr8cZx
+IyYr9bKTVMMDeo8TPAHUrDm9/JGwGcFr0zQe1yHxNUNAgIX6CQ==
+=0B2h
+-----END PGP SIGNATURE-----
