@@ -1,8 +1,8 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/IP-Country/IP-Country-2.280.0.ebuild,v 1.1 2013/08/25 10:02:35 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/IP-Country/IP-Country-2.280.0.ebuild,v 1.2 2014/06/12 11:21:58 zlogene Exp $
 
-EAPI=4
+EAPI=5
 
 MODULE_AUTHOR=NWETTERS
 MODULE_VERSION=2.28
