@@ -1,8 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST IP-Country-2.23.tar.gz 167797 SHA256 2c16f478c4231a45a44223d545f4b690e2d281cae2cdf188ee2bf59bd79c5caf SHA512 1d72be7d052719fb267f70ad9dc012c6e9eeb474478e33e9657c291da41840cdddc2f7f3e5ba2f3b06756528d7c4bdfe65ca0716692fe685dbd4e9396c98813b WHIRLPOOL 8d8c8c4a5f501c8527fed7a52621fedd83b3fe726a4ba26dbaa3237a373b33add70b8f430d85ec1498e37e9f9540d18edcee16931331b7b695bd1fa34260cd3a
 DIST IP-Country-2.27.tar.gz 207632 SHA256 39ed6d3890d655159e950f785f5e124b580ebaa0ab531bc4cf182184801192e1 SHA512 d8f04d17e416c36346b67034522baf8601837cda52eca7d7cf8d424961f638405f76b309226252a30f1c56d0907a717281b5849d04b8bf9adef06caa040e6d5e WHIRLPOOL cd15d74de7c08b1a4bf2b4a2a8e9dce6dc627ce0f241ce93c794ebcb68370c5b04b01c4a3e66b77d3a2cd85ea7eb040efbeb306c8eafeccf3b4e3b649df081db
 DIST IP-Country-2.28.tar.gz 296585 SHA256 88db833a5ab22ed06cb53d6f205725e3b5371b254596053738885e91fa105f75 SHA512 3596014eaeb7d0be8edd9b98c2f31e83587cc48c738837eaa78e9dc6c7ee6cee371a7bc230f28fa2901b9eece7fe0fa2126135a3d90d1261488d61cedcec25ac WHIRLPOOL adb5c5bf18ae3f2534b900437919d7c261a0b0946c33138d72119ebf5710e1669aed473a5ee044780e27ea03cc119c459e2a65365f66baa5acfd7e5b45c93e53
 EBUILD IP-Country-2.23.ebuild 584 SHA256 1aa77660f910092fa01c959f912bd43322a14a9780474f040de9904a449dcb99 SHA512 2b91d5a97de671acb47edff7c67fc92ed1cfea179449a57e9de829a6109b6cecbb9daa5abd2849d1bfdc1466328922232033c48e20d081b6ec489b4a3d116afa WHIRLPOOL 580db543d0fb4af17cb51ed1ef0a8180afe300b9416ebffd8e37d5859862d84d0c53a0ba911369dfd59049f502e7f688cd047074639e2fe79f2ddeaff2185ac0
 EBUILD IP-Country-2.270.0.ebuild 584 SHA256 8ee85d3662a11099d279de732b1d485f875ab1199ade953666962393f85a9771 SHA512 56c895deb07cc475dca6ebb1212599bca3f9564407af348f42625ee418043c41fb1f53c62c28ba18975f2fcaf305a12e66eefa1142895e3be9bfad66f041ca8d WHIRLPOOL e5573edb41f259c493795769aff2d1f849d84fe7e3f0d7bd2abcc558f68b9a020354e20ecd6657b9f9b9c54fe048214da7d3b327071f826ba18b206e610ca6f9
-EBUILD IP-Country-2.280.0.ebuild 584 SHA256 b4c2ff0de46fc96ff73627e15991b5e9d5a3afe39c72d12d5be7c1ebb8678290 SHA512 4669f9c81583764e366a68493b36bab39fdc24aa9fc6c9f4ff4f3c345380121e8f0008ef75266d3534b85565480215e0ad173d694c252d5ec5c0be0f4640e46a WHIRLPOOL 044a41f34ea2cccba5c4fa818fc40e4e98d68efde2249d9415b4673b00f1f0c416522fffbf4826a7a466752008004dcc7993459eb34034dfcba8ba0abbaf8a15
-MISC ChangeLog 5575 SHA256 13e6144c8a0322b8cdd76c5783860b9a3c3d65a51ca7218da4d39f549d2f6788 SHA512 fb5045b24b675987df2a2e4fd31d4dfa77fa40b7a1adf9311bc9a4082485709a0d6fc54e0c5a655d1c6d6ae2c892104361f137212b6763843e9317e6c24977be WHIRLPOOL 7d0bc7f0afd204fafb3ec874ccd91402fc66a14a38ca4fa23e72736608a10f3df69b5c4e108f07b2f8d28dbe24af220de011536db4e99ddbf65478e9692c5a84
+EBUILD IP-Country-2.280.0.ebuild 584 SHA256 cc4ed88291dea703ac422a204906c8687bb77417802ec5627da9080e1235bead SHA512 05e6c0e371a4f12b6e9e0db550adcdd6bdef0cb9681f0b526011275473ab3bd6c8f15985038ba34c6409b527835ffa856403f1bbf3637e3f5bf2de791864c980 WHIRLPOOL 48f7d4a08ca88216d7d7739389c6e87747f42c16d85d5fd0dafda94034ac928438814e7c11fdacf36520e224706172a89f114b1d9379f8aa725cb12237cac2c4
+MISC ChangeLog 5670 SHA256 915d578aac33da63efc0e750e55191a8ae31399c12bfa81861360cdb5e0fcc5c SHA512 e661e7eb634d446e3ea420665e31acd07f9c58d6cc7431bc4156759a5bf9bad8f8e549a912e795485619ea83e01a572c173816a862ef7b15dbed502abfff6da5 WHIRLPOOL fdc483c504722943f28890b03fcc30089e349f3339740866baa9ae3ec0fd28acdafb7a8f428a115c43f1ebe2cadf6c4c2c301e1a70701274642497a39599ce6b
 MISC metadata.xml 615 SHA256 43f0ae305c9c925131282ac547d46e6ab5ad62b3c2d9a398e243b01365619aff SHA512 ed5efc6b7d93b15b3f80199ed375d0f4c136d70c6db6d314a5358092e34a15e51b392a9c9a5c8520dc0912bd5fe31c6003ca05c4a4b75c4ad0f1779ee643bce8 WHIRLPOOL f71fc5b2812112d8a27031641feab47aa13273922483653a947642e7e26e4ce5c46c1001a2b83f8c10332f1ae80baa7f30de5968809d2c298a5bd1505591b4cd
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iJwEAQEIAAYFAlOZjpwACgkQG9wOWsQutdb1+wP/T9ttRY2XvkoQfd1E48PavcXN
+RUQu3n121ygvvo8lsGZDKzSPvrWEY//6bcXz1esmI7ULgUWWKQS6VAeN7CS7inEo
+sC4UShlbEauwVxy50FaSEj4spjRI5CWWA9eqnEWAr87oOxcpACcSKQoeXCAkluHT
+1eaLM/OBvqampiVkMLY=
+=36vq
+-----END PGP SIGNATURE-----
