@@ -1,0 +1,11 @@
+DEFINED_PHASES=compile install setup
+DESCRIPTION=Command-line tool to paste to paste.kde.org
+EAPI=5
+HOMEPAGE=http://projects.kde.org/projects/playground/utils/kpaste
+IUSE=python_targets_python2_7 python_single_target_python2_7
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-3
+SLOT=0
+SRC_URI=http://dev.gentoo.org/~kensington/distfiles/kpaste-1.0.tar.bz2
+_eclasses_=eutils	025442f2eecab39ad0b4e541b6e142af	multilib	fac675dcccf94392371a6abee62d909f	python-single-r1	a71a169a881e0a11d04a7fe12dc39f6e	python-utils-r1	8ba35e0dacf49c6cae65901d183c971f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=4185b4534f1a80e79cc97e61b47c3428
