@@ -1,10 +1,15 @@
 # ChangeLog for app-text/kpaste
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/kpaste/ChangeLog,v 1.1 2011/12/31 04:57:04 floppym Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/kpaste/ChangeLog,v 1.2 2014/06/12 11:23:48 kensington Exp $
+
+*kpaste-1.0 (12 Jun 2014)
+
+  12 Jun 2014; Michael Palimaka <kensington@gentoo.org> +kpaste-1.0.ebuild,
+  metadata.xml:
+  Version bump wrt bug #512900. KDE herd taking over maintainership of package.
 
 *kpaste-0.1 (31 Dec 2011)
 
   31 Dec 2011; Mike Gilbert <floppym@gentoo.org> +kpaste-0.1.ebuild,
   +metadata.xml:
   New package.
-
