@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/IP-Country
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/IP-Country/ChangeLog,v 1.45 2013/08/25 10:02:35 patrick Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/IP-Country/ChangeLog,v 1.46 2014/06/12 11:21:58 zlogene Exp $
+
+  12 Jun 2014; Mikle Kolyada <zlogene@gentoo.org> IP-Country-2.280.0.ebuild:
+  Bump to EAPI=5
 
 *IP-Country-2.280.0 (25 Aug 2013)
 
